[package]
name = "badgeros_kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false

[dependencies]
bytemuck = "1.23.0"
chrono = { version="0.4.41", default-features=false }
crc = "3.3.0"
static_assertions = "1.1.0"
tock-registers = "0.9.0"
uuid = { version="1.18.1", default-features=false, features=["serde"] }

[build-dependencies]
bindgen = "0.71.0"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
